syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

// TODO: verifie si on peut reutiliser les memes request/response
// TODO: met plutot les deux chiffres directement dans calculatorRequest
message TwoIntegers {
  int32 first = 1;
  int32 second = 2;
}

message CalculatorRequest {
  TwoIntegers twoIntegers = 1;
}

message CalculatorResponse {
  int32 result = 1;
}

message PNDRequest {
  int64 number = 1;
}

message PNDResponse {
  int64 result = 1;
}

message AverageRequest {
  int32 number = 1;
}

message AverageResponse {
  double result = 1;
}

message MaxRequest {
  int32 number = 1;
}

message MaxResponse {
  int32 result = 1;
}
message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse{
  double result = 1;
}

service CalculatorService {
  rpc Sum(CalculatorRequest) returns (CalculatorResponse);
  rpc PrimeNumberDecomposition(PNDRequest) returns (stream PNDResponse);
  rpc ComputeAverage(stream AverageRequest) returns (stream AverageResponse);
  rpc FindMaximum(stream MaxRequest) returns (stream MaxResponse);

  // this rpc will throw an exception if it receives a negative
  // the type of error is INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse);
}
